# luau

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BYTECODE_SPEC.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  LICENSE  LICENSE.txt  LuauConfig.cmake.in  Makefile  README.md  SECURITY.md  SWIFT_PACKAGE_STRUCTURE.md  Sources.cmake  VALUE_SYSTEM.md  bench.json  xmake.lua
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmark-cachegrind.yml  benchmark-dev.yml  benchmark.yml  build.yml  new-release.yml  prototyping.yml  release.yml  setup-luau.yml  static-analysis-cachegrind.yml  static-analysis.yml
Analysis/src/: AnyTypeSummary.cpp  Anyification.cpp  ApplyTypeFunction.cpp  AstJsonEncoder.cpp  AstQuery.cpp  AstUtils.cpp  Autocomplete.cpp  AutocompleteCore.cpp  AutocompleteCore.h  BuiltinDefinitions.cpp  BuiltinTypeFunctions.cpp  Clone.cpp  Config.cpp  Connective.cpp  Constraint.cpp  ConstraintGenerator.cpp  ConstraintGraph.cpp  ConstraintGraphBuilder.cpp  ConstraintSolver.cpp  ConstraintSolverLogger.cpp  ControlFlowGraph.cpp  DataFlowGraph.cpp  DataFlowGraphBuilder.cpp  DcrLogger.cpp  Def.cpp  Differ.cpp  DumpCFG.cpp  EmbeddedBuiltinDefinitions.cpp  EqSatSimplification.cpp  Error.cpp  ExpectedTypeVisitor.cpp  FileResolver.cpp  FragmentAutocomplete.cpp  Frontend.cpp  Generalization.cpp  GlobalTypes.cpp  InferPolarity.cpp  Instantiation.cpp  Instantiation2.cpp  IostreamHelpers.cpp  (+57 more)
Ast/src/: Allocator.cpp  Ast.cpp  Confusables.cpp  Cst.cpp  Lexer.cpp  Location.cpp  Parser.cpp  PrettyPrinter.cpp  StringUtils.cpp  TimeTrace.cpp
Bytecode/src/: BytecodeBuilder.cpp  BytecodeGraph.cpp  BytecodeGraphParser.h  BytecodeGraphSerializer.h  Sccp.cpp
CLI/: Analyze.cpp  Ast.cpp  Bytecode.cpp  Compile.cpp  Coverage.cpp  Coverage.h  FileUtils.cpp  FileUtils.h  Flags.cpp  Flags.h  Profiler.cpp  Profiler.h  Reduce.cpp  Repl.cpp  Repl.h  ReplEntry.cpp  Require.cpp  Require.h  Web.cpp
CLI/html/: index.html
CLI/src/: Analyze.cpp  AnalyzeRequirer.cpp  Ast.cpp  Bytecode.cpp  Compile.cpp  Counters.cpp  Coverage.cpp  FileUtils.cpp  Flags.cpp  Reduce.cpp  Repl.cpp  ReplEntry.cpp  ReplRequirer.cpp  Require.cpp  RequirerUtils.cpp  VfsNavigator.cpp  Web.cpp
CodeGen/include/: luacodegen.h
CodeGen/src/: AssemblyBuilderA64.cpp  AssemblyBuilderX64.cpp  BitUtils.h  ByteUtils.h  BytecodeAnalysis.cpp  BytecodeSummary.cpp  CodeAllocator.cpp  CodeBlockUnwind.cpp  CodeGen.cpp  CodeGenA64.cpp  CodeGenA64.h  CodeGenAssembly.cpp  CodeGenContext.cpp  CodeGenContext.h  CodeGenLower.h  CodeGenUtils.cpp  CodeGenUtils.h  CodeGenX64.cpp  CodeGenX64.h  CustomExecUtils.h  EmitCommon.h  (+48 more)
LuauInstaller/: BUILDING.md  Bundle.wxs  DownloadBinaries.py  Product.wxs
bench/: bench.py  bench_support.lua  color.py  influxbench.py  install.sh  measure_time.py  tabulate.py  test.py
docs/: .gitignore  CNAME  Gemfile  _config.yml  compatibility.md  index.md  limited-terms-of-use.md  lint.md  performance.md  sandbox.md  syntax.md  typecheck.md  why.md
fuzz/: CMakeLists.txt  compiler.cpp  format.cpp  libprotobuf-mutator-patch.patch  linter.cpp  luau.proto  number.cpp  parser.cpp  prettyprinter.cpp  proto.cpp  protoprint.cpp  prototest.cpp  syntax.dict  transpiler.cpp  typeck.cpp
fuzz/seed-corpus/: basic_class.luau
papers/: .gitignore
prototyping/: .gitignore  Everything.agda  Examples.agda  Interpreter.agda  Main.agda  PrettyPrinter.agda  Properties.agda  README.md  tests  tests.py
rfcs/: Path recognition to former locations  README.md  STATUS.md  TEMPLATE.md  annotations.md  api-evolution.md  arrow-functions.md  attributes.md  behavior-boolean-test-metamethods.md  behavior-eq-metamethod.md  behavior-math-clamp-nan.md  behavior-string-indexing.md  change-assert-return.md  change-global-version.md  config-luaurc.md  constrained-generics.md  deprecate-getfenv-setfenv.md  deprecate-table-getn-foreach.md  disallow-proposals-leading-to-ambiguity-in-grammar.md  exact-table-types.md  function-and-table-types.md  function-bit32-bswap.md  function-bit32-byteswap.md  function-bit32-clz-ctz.md  function-bit32-countlz-countrz.md  function-coroutine-close.md  function-debug-id.md  function-debug-info.md  function-newproxy-table-support  function-newproxy-table-support.md  function-overload-resolution.md  function-string-pack-unpack.md  function-string-totable.md  function-table-clear.md  function-table-clone.md  function-table-create-find.md  function-table-freeze.md  generalized-iteration.md  generalized-string-iteration.md  generic-function-subtyping.md  (+67 more)
scripts/: JoinPaths.cmake  luau.pc.in  run-with-cachegrind.sh
stats/: compiler-stats.py
tests/: .#TypeVar.test.cpp  AnyTypeSummary.test.cpp  AssemblyBuilderA64.test.cpp  AssemblyBuilderX64.test.cpp  AstJsonEncoder.test.cpp  AstQuery.test.cpp  AstQueryDsl.cpp  AstQueryDsl.h  AstVisitor.test.cpp  Autocomplete.test.cpp  BuiltinDefinitions.test.cpp  BytecodeCallInliner.test.cpp  BytecodeCompiler.test.cpp  ClassFixture.cpp  ClassFixture.h  CodeAllocator.test.cpp  Compiler.test.cpp  Config.test.cpp  Conformance.test.cpp  ConformanceIrHooks.h  ConstraintGeneratorFixture.cpp  ConstraintGeneratorFixture.h  ConstraintGraphBuilder.test.cpp  ConstraintGraphBuilderFixture.cpp  ConstraintGraphBuilderFixture.h  ConstraintSolver.test.cpp  ControlFlowGraph.test.cpp  CostModel.test.cpp  DataFlowGraph.test.cpp  DataFlowGraphBuilder.test.cpp  DenseHash.test.cpp  DenseHash2.test.cpp  DiffAsserts.cpp  DiffAsserts.h  Differ.test.cpp  DirectFieldAccess.test.cpp  EqSat.language.test.cpp  EqSat.propositional.test.cpp  EqSat.slice.test.cpp  EqSatSimplification.test.cpp  (+95 more)
tools/: LuauVisualize.py  codegenstat.py  codesizeprediction.py  faillist.txt  flag-bisect.py  fuzzfilter.py  gdb-printers.py  gdb_printers.py  heapgraph.py  heapsnapshot.py  heapstat.py  lldb-formatters.lldb  lldb_formatters.lldb  lldb_formatters.py  luau.pc.in  lvmexecute_split.py  numprint.py  patchtests.py  perfgraph.py  perfstat.py  stack-usage-reporter.py  stackdbg.py  svg.py  test_dcr.py  tracegraph.py
xmake/: lib.lua  xmake_func.lua
(+951 files in other folders)
